--- a/workflow/perses.yml
+++ b/workflow/perses.yml
@@ -31,7 +31,8 @@ jobs:
         - name: "Build Android project"
           uses: vgaidarji/android-github-actions-build@v1.0.1
           with:
-            args: "./gradlew assembleDebug"
+            args: "./gradlew assembleDebug assembleAndroidTest"
+            
         - run: ls -l ./app/build/outputs/apk/debug/app-debug.apk
 
         # Build Perses config
