--- a/workflow/perses.yml
+++ b/workflow/perses.yml
@@ -94,6 +94,11 @@ jobs:
           run: |       
             cd .perses_runner
             node index -a tests -n ${{steps.generate-project-id.outputs.result}}
+
+        - name: "Perses gets logs from virtual devices"
+          run: |       
+            cd .perses_runner
+            node index -a getLogs -n ${{steps.generate-project-id.outputs.result}}
   
         - name: "Perses Destroy Infrastructure"
           run: |       
@@ -120,23 +125,23 @@ jobs:
             npm install
             npm start
             
-        
-        # Setup yq parser for obtaing custom tests path
-        - name: "Setup parser for custom tests"
-          run: |       
-            sudo apt-get install python3-setuptools  
-            sudo pip3 install yq
+        ### CUSTOM TESTS ### TODO
+        # # Setup yq parser for obtaing custom tests path
+        # - name: "Setup parser for custom tests"
+        #   run: |       
+        #     sudo apt-get install python3-setuptools  
+        #     sudo pip3 install yq
 
-        # Setup Custom Test
-        - name: "Setup Custom Test"
-          run: |       
-            cp  .perses-full.yml .perses_runner/projects/${{steps.generate-project-id.outputs.result}}/logs/perses-config.yml
-            ls ./`cat .perses.yml | yq .custom_test | tr -d '"'`
-            cd ./`cat .perses.yml | yq .custom_test | tr -d '"'`
-            npm install
+        # # Setup Custom Test
+        # - name: "Setup Custom Test"
+        #   run: |       
+        #     cp  .perses-full.yml .perses_runner/projects/${{steps.generate-project-id.outputs.result}}/logs/perses-config.yml
+        #     ls ./`cat .perses.yml | yq .custom_test | tr -d '"'`
+        #     cd ./`cat .perses.yml | yq .custom_test | tr -d '"'`
+        #     npm install
 
-        # Run Custom Test
-        - name: "Run Custom Test"
-          run: |       
-            cd  .perses_runner/projects/${{steps.generate-project-id.outputs.result}}/logs
-            node ../../../../`cat perses-config.yml | yq .custom_test | tr -d '"'`
+        # # Run Custom Test
+        # - name: "Run Custom Test"
+        #   run: |       
+        #     cd  .perses_runner/projects/${{steps.generate-project-id.outputs.result}}/logs
+        #     node ../../../../`cat perses-config.yml | yq .custom_test | tr -d '"'`
