--- a/workflow/perses-workflow.yml
+++ b/workflow/perses-workflow.yml
@@ -61,7 +61,7 @@ jobs:
           uses: actions/checkout@v2
           with:
             repository: perses-org/perses-engine
-            token: ${{ secrets.PERSES_PAT }}
+            #token: ${{ secrets.PERSES_PAT }}
             path: .perses_runner
 
         - name: "Install dependences"
